Fixed h4 letter-spacing fra % til px

--- a/mutual.css
+++ b/mutual.css
@@ -50,7 +50,7 @@ h3 {
 h4 {
   font-size: 2rem;
   font-weight: 200;
-  letter-spacing: 15%;
+  letter-spacing: 8px;
   margin-left: 2vw;
   margin-right: 2vw;
   margin-top: 2vw;
